fixing nav bar stuck at top
My nav bar has been stuck at the top, adding this code so that it will be at the bottom of the page no matter what

--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,16 @@
     gap: 1em;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+}
+
+
